--- a/AI_Assignment.ipynb
+++ b/AI_Assignment.ipynb
@@ -136,7 +136,7 @@
       "metadata": {
         "id": "2Hoc_OMDpbNn"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -171,7 +171,7 @@
       "metadata": {
         "id": "5LN1kOIyt8_q"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -195,9 +195,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "omoFR-KAyfGD",
-        "outputId": "aa8c4fa3-86e7-4374-f5b9-2bc01c19f20c"
+        "outputId": "69bd5f41-26e3-40f3-ec5b-71f3a8e97eb3"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -207,7 +207,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 6
         }
       ]
     },
@@ -232,9 +232,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8FDhhVjrwkAW",
-        "outputId": "79cec8fc-3c5e-4bc0-bdeb-1fb50e5588bd"
+        "outputId": "df3edec7-503b-4015-be03-15914c6c8bd5"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -244,7 +244,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 7
         }
       ]
     },
@@ -269,9 +269,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ziECmnjLxILU",
-        "outputId": "1baec9b6-cae5-45e4-ad44-94f8adad20b3"
+        "outputId": "3c764d67-20a6-4cc5-bb76-827a739f8dba"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -281,7 +281,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 8
         }
       ]
     },
@@ -306,7 +306,7 @@
       "metadata": {
         "id": "1sl5Rjoc-SHa"
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -349,7 +349,7 @@
       "metadata": {
         "id": "hbu7h1t_4Gts"
       },
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -369,13 +369,13 @@
       ],
       "metadata": {
         "id": "SgpxjC8Rhp12",
-        "outputId": "31747bd1-c658-4852-d80d-14aa00e1d39a",
+        "outputId": "b1aebe6c-c000-4dc6-e12d-aa0dc43bf539",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 311
         }
       },
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -385,7 +385,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 11
         },
         {
           "output_type": "display_data",
@@ -422,9 +422,9 @@
           "height": 298
         },
         "id": "yVj2C7lX2H8i",
-        "outputId": "ac8520f1-e761-4526-a87f-15d82b38cb77"
+        "outputId": "6ba16fc6-9ade-4333-e0e3-0ea5edc44db4"
       },
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -434,7 +434,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 12
         },
         {
           "output_type": "display_data",
@@ -467,7 +467,7 @@
       "metadata": {
         "id": "95LS0ATovQ_0"
       },
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -518,7 +518,7 @@
       "metadata": {
         "id": "mGUbkte1oqds"
       },
-      "execution_count": 14,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -553,9 +553,9 @@
           "height": 283
         },
         "id": "TbPMKCvHw4jc",
-        "outputId": "c674a8d6-ac04-4f15-b51f-4443efb49634"
+        "outputId": "de00aa3f-0fa4-40ae-8192-d1ad8dd59091"
       },
-      "execution_count": 15,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -593,7 +593,7 @@
       "metadata": {
         "id": "zLtrt58AF2v4"
       },
-      "execution_count": 16,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -610,9 +610,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2da8b3fb-5747-4860-d9e7-b3064e406898"
+        "outputId": "f15eaddd-3c12-4563-c9f0-66b0d455fb20"
       },
-      "execution_count": 17,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -622,7 +622,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 16
         }
       ]
     },
@@ -638,7 +638,7 @@
       "metadata": {
         "id": "ES5-eY6QJNN4"
       },
-      "execution_count": 18,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -692,9 +692,9 @@
           "height": 296
         },
         "id": "tQdIm2VMJ-Qe",
-        "outputId": "67f68c6b-9d5f-407a-b6c9-ee29d0a14adc"
+        "outputId": "708db33c-f586-4964-864e-1faf215f9312"
       },
-      "execution_count": 19,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -704,7 +704,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 18
         },
         {
           "output_type": "display_data",
@@ -734,7 +734,7 @@
       "metadata": {
         "id": "bmoWPGPHLojt"
       },
-      "execution_count": 20,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -751,9 +751,9 @@
           "height": 307
         },
         "id": "Rbu_xfgiMYnV",
-        "outputId": "13829e14-19f7-486d-f996-b22938e438d5"
+        "outputId": "98ffaa43-5b43-4127-b365-b4db817a2404"
       },
-      "execution_count": 21,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -763,7 +763,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 20
         },
         {
           "output_type": "display_data",
@@ -814,9 +814,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 283
         },
-        "outputId": "3c89e2c5-447c-47af-f9bb-b41278e6c019"
+        "outputId": "4d0870b2-40c2-46f3-b2ad-d63d1759f103"
       },
-      "execution_count": 22,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "display_data",
@@ -858,9 +858,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 283
         },
-        "outputId": "b63ab184-4113-4773-8bba-020fb28a6fad"
+        "outputId": "89749ce7-779c-4dc8-8fa7-606236364637"
       },
-      "execution_count": 23,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "display_data",
@@ -901,9 +901,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 279
         },
-        "outputId": "de0d30e6-6bd1-4b0b-c5a9-74d30516e2be"
+        "outputId": "8e2e0b03-aa25-4dfa-b6e4-0db49ff37bd3"
       },
-      "execution_count": 24,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "display_data",
@@ -935,9 +935,9 @@
           "height": 290
         },
         "id": "-IrN0_y9SUIa",
-        "outputId": "8e918e8a-7655-423d-b013-7e46c82d0630"
+        "outputId": "5c4d6539-583f-483b-a5f0-55d855c1629e"
       },
-      "execution_count": 25,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "display_data",
@@ -993,7 +993,7 @@
       "metadata": {
         "id": "gwYK2tacy0oq"
       },
-      "execution_count": 26,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -1008,7 +1008,7 @@
       "metadata": {
         "id": "WB0x9HStbUuU"
       },
-      "execution_count": 27,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -1054,9 +1054,9 @@
           "height": 300
         },
         "id": "UTsOT5JSN0Gp",
-        "outputId": "7d24e19d-8b3c-46a3-a3fd-9760d920716f"
+        "outputId": "c4c4ed65-7fb7-4c07-ba4a-779557ee2399"
       },
-      "execution_count": 28,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1066,7 +1066,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 27
         },
         {
           "output_type": "display_data",
@@ -1162,7 +1162,7 @@
       "metadata": {
         "id": "Od2XUUL8bSSK"
       },
-      "execution_count": 29,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -1176,9 +1176,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "b2e57eb5-08de-46aa-fb40-0dff88ecdab1"
+        "outputId": "53a20b7c-a649-4084-f1f0-63f11722ff2f"
       },
-      "execution_count": 31,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1257,7 +1257,7 @@
       "metadata": {
         "id": "3G6GbtLjnAyv"
       },
-      "execution_count": 32,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -1272,7 +1272,7 @@
       "metadata": {
         "id": "hq-7ilNNorkO"
       },
-      "execution_count": 35,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -1305,15 +1305,89 @@
     {
       "cell_type": "code",
       "source": [
-        "wnw_1 = 180             # time window duration in s\n",
-        "wnw1_smp = wnw_1*fs     # number of samples in the window\n",
-        "wnw_2 = 600             # time window duration in s\n",
-        "wnw2_smp = wnw_2*fs     # number of samples in the window"
+        "wnw_3 = 180             # time window duration in s\n",
+        "wnw3_smp = wnw_3*fs     # number of samples in the window\n",
+        "\n",
+        "Rpks_tr3 = []\n",
+        "Rpks = 1\n",
+        "for patient in enumerate(dataupblr_filt[patient][Rpks]):\n",
+        "  temp = []\n",
+        "  for idx, k in enumerate(dataupblr_filt[patient][Rpks]):\n",
+        "    if (k-int(wnw3_smp/2))>0:\n",
+        "      temp.append(k)\n",
+        "  temp = np.vstack(temp)\n",
+        "  lst = copy.deepcopy(temp)\n",
+        "  Rpks_tr3.insert(idx, lst)\n",
+        "  Rpks_tr3 = np.vstack(Rpks_tr3)"
       ],
       "metadata": {
-        "id": "SPC3xVVa8ZLs"
+        "id": "SPC3xVVa8ZLs",
+        "outputId": "c867ae33-a6d8-49ad-eecf-e6d2b0806885",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 235
+        }
       },
-      "execution_count": 34,
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-39-0f11ffdd3d9f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mpatient\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataupblr_filt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpatient\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mRpks\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m   \u001b[0mtemp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m   \u001b[0;32mfor\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataupblr_filt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpatient\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mRpks\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwnw3_smp\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m       \u001b[0mtemp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not tuple"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Rpks_tr3[0]"
+      ],
+      "metadata": {
+        "id": "O5Ht_hE_S3Gc",
+        "outputId": "8e29ea63-b762-4c2d-fdbc-210cfa627ab1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([22511], dtype=int32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "wnw_10 = 600             # time window duration in s\n",
+        "wnw10_smp = wnw_10*fs    # number of samples in the window\n",
+        "\n",
+        "Rpks_tr10 = []\n",
+        "Rpks = 1\n",
+        "for patient in range(num_files):\n",
+        "  Rpks = dataupblr_filt[patient][Rpks]\n",
+        "  for idx, k in enumerate(Rpks):\n",
+        "    if (k-wnw10_smp)>0:\n",
+        "      Rpks_tr10.append(k)\n",
+        "Rpks_tr10 = np.vstack(Rpks_tr10)"
+      ],
+      "metadata": {
+        "id": "9vKEs2DRN_t4"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
