--- a/AI_Assignment.ipynb
+++ b/AI_Assignment.ipynb
@@ -39,11 +39,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "jsgLshUKo59r"
+        "id": "jsgLshUKo59r",
+        "outputId": "a0339278-950b-4036-ae07-4a8b8aa14846",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /gdrive; to attempt to forcibly remount, call drive.mount(\"/gdrive\", force_remount=True).\n"
+          ]
+        }
+      ],
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/gdrive')"
@@ -55,10 +67,22 @@
         "%cd /gdrive/MyDrive/AI_Assignment/training_set"
       ],
       "metadata": {
-        "id": "zmGIM_ArpC26"
+        "id": "zmGIM_ArpC26",
+        "outputId": "2153c676-8636-4a45-a87f-0e79987377d0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/gdrive/MyDrive/AI_Assignment/training_set\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -66,10 +90,22 @@
         "!unzip training_set.zip"
       ],
       "metadata": {
-        "id": "TaL224mzpGZc"
+        "id": "TaL224mzpGZc",
+        "outputId": "6f463cf3-4fc2-481d-a4e2-153971114d2a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "unzip:  cannot find or open training_set.zip, training_set.zip.zip or training_set.zip.ZIP.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -114,10 +150,60 @@
         "from math import pi"
       ],
       "metadata": {
-        "id": "By6d8d8HqfdA"
+        "id": "By6d8d8HqfdA",
+        "outputId": "e86747ce-4e02-4d11-b147-2eb8968b3978",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: pyhrv in /usr/local/lib/python3.7/dist-packages (0.4.0)\n",
+            "Requirement already satisfied: biosppy in /usr/local/lib/python3.7/dist-packages (from pyhrv) (0.8.0)\n",
+            "Requirement already satisfied: nolds in /usr/local/lib/python3.7/dist-packages (from pyhrv) (0.5.2)\n",
+            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.7/dist-packages (from pyhrv) (3.2.2)\n",
+            "Requirement already satisfied: scipy in /usr/local/lib/python3.7/dist-packages (from pyhrv) (1.4.1)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from pyhrv) (1.19.5)\n",
+            "Requirement already satisfied: spectrum in /usr/local/lib/python3.7/dist-packages (from pyhrv) (0.8.0)\n",
+            "Requirement already satisfied: bidict in /usr/local/lib/python3.7/dist-packages (from biosppy->pyhrv) (0.21.4)\n",
+            "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.7/dist-packages (from biosppy->pyhrv) (1.0.1)\n",
+            "Requirement already satisfied: joblib in /usr/local/lib/python3.7/dist-packages (from biosppy->pyhrv) (1.1.0)\n",
+            "Requirement already satisfied: h5py in /usr/local/lib/python3.7/dist-packages (from biosppy->pyhrv) (3.1.0)\n",
+            "Requirement already satisfied: shortuuid in /usr/local/lib/python3.7/dist-packages (from biosppy->pyhrv) (1.0.8)\n",
+            "Requirement already satisfied: opencv-python in /usr/local/lib/python3.7/dist-packages (from biosppy->pyhrv) (4.1.2.30)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from biosppy->pyhrv) (1.15.0)\n",
+            "Requirement already satisfied: cached-property in /usr/local/lib/python3.7/dist-packages (from h5py->biosppy->pyhrv) (1.5.2)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib->pyhrv) (3.0.6)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib->pyhrv) (1.3.2)\n",
+            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib->pyhrv) (2.8.2)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib->pyhrv) (0.11.0)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.7/dist-packages (from nolds->pyhrv) (57.4.0)\n",
+            "Requirement already satisfied: future in /usr/local/lib/python3.7/dist-packages (from nolds->pyhrv) (0.16.0)\n",
+            "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.7/dist-packages (from scikit-learn->biosppy->pyhrv) (3.0.0)\n",
+            "Requirement already satisfied: biosppy in /usr/local/lib/python3.7/dist-packages (0.8.0)\n",
+            "Requirement already satisfied: shortuuid in /usr/local/lib/python3.7/dist-packages (from biosppy) (1.0.8)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from biosppy) (1.19.5)\n",
+            "Requirement already satisfied: opencv-python in /usr/local/lib/python3.7/dist-packages (from biosppy) (4.1.2.30)\n",
+            "Requirement already satisfied: h5py in /usr/local/lib/python3.7/dist-packages (from biosppy) (3.1.0)\n",
+            "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.7/dist-packages (from biosppy) (1.0.1)\n",
+            "Requirement already satisfied: scipy in /usr/local/lib/python3.7/dist-packages (from biosppy) (1.4.1)\n",
+            "Requirement already satisfied: bidict in /usr/local/lib/python3.7/dist-packages (from biosppy) (0.21.4)\n",
+            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.7/dist-packages (from biosppy) (3.2.2)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from biosppy) (1.15.0)\n",
+            "Requirement already satisfied: joblib in /usr/local/lib/python3.7/dist-packages (from biosppy) (1.1.0)\n",
+            "Requirement already satisfied: cached-property in /usr/local/lib/python3.7/dist-packages (from h5py->biosppy) (1.5.2)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib->biosppy) (3.0.6)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib->biosppy) (0.11.0)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib->biosppy) (1.3.2)\n",
+            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib->biosppy) (2.8.2)\n",
+            "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.7/dist-packages (from scikit-learn->biosppy) (3.0.0)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -136,7 +222,7 @@
       "metadata": {
         "id": "2Hoc_OMDpbNn"
       },
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -171,7 +257,7 @@
       "metadata": {
         "id": "5LN1kOIyt8_q"
       },
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -195,9 +281,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "omoFR-KAyfGD",
-        "outputId": "69bd5f41-26e3-40f3-ec5b-71f3a8e97eb3"
+        "outputId": "54814c5c-04db-453e-ec5e-f062c272fd63"
       },
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -207,7 +293,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 8
         }
       ]
     },
@@ -232,9 +318,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8FDhhVjrwkAW",
-        "outputId": "df3edec7-503b-4015-be03-15914c6c8bd5"
+        "outputId": "0ba888af-563d-4557-9d25-cbf184ef55ab"
       },
-      "execution_count": 7,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -244,7 +330,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 9
         }
       ]
     },
@@ -269,9 +355,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ziECmnjLxILU",
-        "outputId": "3c764d67-20a6-4cc5-bb76-827a739f8dba"
+        "outputId": "8b6531bb-1717-46c7-e49e-a28ba87f62af"
       },
-      "execution_count": 8,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -281,7 +367,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 10
         }
       ]
     },
@@ -306,7 +392,7 @@
       "metadata": {
         "id": "1sl5Rjoc-SHa"
       },
-      "execution_count": 9,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -349,7 +435,7 @@
       "metadata": {
         "id": "hbu7h1t_4Gts"
       },
-      "execution_count": 10,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -369,13 +455,13 @@
       ],
       "metadata": {
         "id": "SgpxjC8Rhp12",
-        "outputId": "b1aebe6c-c000-4dc6-e12d-aa0dc43bf539",
+        "outputId": "4c0e5ed7-e56e-4c34-8a44-e3d61743bb55",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 311
         }
       },
-      "execution_count": 11,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -385,7 +471,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 13
         },
         {
           "output_type": "display_data",
@@ -422,9 +508,9 @@
           "height": 298
         },
         "id": "yVj2C7lX2H8i",
-        "outputId": "6ba16fc6-9ade-4333-e0e3-0ea5edc44db4"
+        "outputId": "4c7a2369-5b5d-431e-d2f5-2d25cac1bb61"
       },
-      "execution_count": 12,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -434,7 +520,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 14
         },
         {
           "output_type": "display_data",
@@ -467,7 +553,7 @@
       "metadata": {
         "id": "95LS0ATovQ_0"
       },
-      "execution_count": 12,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -518,7 +604,7 @@
       "metadata": {
         "id": "mGUbkte1oqds"
       },
-      "execution_count": 13,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -553,9 +639,9 @@
           "height": 283
         },
         "id": "TbPMKCvHw4jc",
-        "outputId": "de00aa3f-0fa4-40ae-8192-d1ad8dd59091"
+        "outputId": "6cd31e78-c322-4855-b7c4-3cc5f86b284e"
       },
-      "execution_count": 14,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -593,7 +679,7 @@
       "metadata": {
         "id": "zLtrt58AF2v4"
       },
-      "execution_count": 15,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -610,9 +696,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f15eaddd-3c12-4563-c9f0-66b0d455fb20"
+        "outputId": "7d4e30a4-b15e-422e-b03a-9df2e585b52f"
       },
-      "execution_count": 16,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -622,7 +708,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 18
         }
       ]
     },
@@ -638,7 +724,7 @@
       "metadata": {
         "id": "ES5-eY6QJNN4"
       },
-      "execution_count": 17,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -692,9 +778,9 @@
           "height": 296
         },
         "id": "tQdIm2VMJ-Qe",
-        "outputId": "708db33c-f586-4964-864e-1faf215f9312"
+        "outputId": "99efe65c-1b3b-44d0-c9a6-cb339231adc1"
       },
-      "execution_count": 18,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -704,7 +790,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 20
         },
         {
           "output_type": "display_data",
@@ -734,7 +820,7 @@
       "metadata": {
         "id": "bmoWPGPHLojt"
       },
-      "execution_count": 19,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -751,9 +837,9 @@
           "height": 307
         },
         "id": "Rbu_xfgiMYnV",
-        "outputId": "98ffaa43-5b43-4127-b365-b4db817a2404"
+        "outputId": "07f69a62-ce95-49cd-9ade-1c520333c0ec"
       },
-      "execution_count": 20,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -763,7 +849,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 22
         },
         {
           "output_type": "display_data",
@@ -814,9 +900,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 283
         },
-        "outputId": "4d0870b2-40c2-46f3-b2ad-d63d1759f103"
+        "outputId": "f68188f4-b2e5-4af3-a047-0186c94e16d7"
       },
-      "execution_count": 21,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "display_data",
@@ -858,9 +944,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 283
         },
-        "outputId": "89749ce7-779c-4dc8-8fa7-606236364637"
+        "outputId": "2a5f683f-09ff-4494-ab03-7d0087be6101"
       },
-      "execution_count": 22,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "display_data",
@@ -901,9 +987,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 279
         },
-        "outputId": "8e2e0b03-aa25-4dfa-b6e4-0db49ff37bd3"
+        "outputId": "63f5d1a4-6fd2-4122-ddb3-4546941c9773"
       },
-      "execution_count": 23,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "display_data",
@@ -935,9 +1021,9 @@
           "height": 290
         },
         "id": "-IrN0_y9SUIa",
-        "outputId": "5c4d6539-583f-483b-a5f0-55d855c1629e"
+        "outputId": "1e1e0102-252a-4bf2-adaa-de008ebf8001"
       },
-      "execution_count": 24,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "display_data",
@@ -993,7 +1079,7 @@
       "metadata": {
         "id": "gwYK2tacy0oq"
       },
-      "execution_count": 25,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -1008,7 +1094,7 @@
       "metadata": {
         "id": "WB0x9HStbUuU"
       },
-      "execution_count": 26,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -1054,9 +1140,9 @@
           "height": 300
         },
         "id": "UTsOT5JSN0Gp",
-        "outputId": "c4c4ed65-7fb7-4c07-ba4a-779557ee2399"
+        "outputId": "9347fa85-ca71-4cc8-a1e3-7d8c529ac3f4"
       },
-      "execution_count": 27,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1066,7 +1152,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 29
         },
         {
           "output_type": "display_data",
@@ -1162,7 +1248,7 @@
       "metadata": {
         "id": "Od2XUUL8bSSK"
       },
-      "execution_count": 28,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -1176,9 +1262,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "53a20b7c-a649-4084-f1f0-63f11722ff2f"
+        "outputId": "4ffcbbad-b15c-4049-c7f9-99a54d75f205"
       },
-      "execution_count": 29,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1257,7 +1343,7 @@
       "metadata": {
         "id": "3G6GbtLjnAyv"
       },
-      "execution_count": 30,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -1272,7 +1358,7 @@
       "metadata": {
         "id": "hq-7ilNNorkO"
       },
-      "execution_count": 31,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -1328,7 +1414,7 @@
           "height": 235
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1355,7 +1441,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1381,7 +1467,9 @@
         "  Rpks = dataupblr_filt[patient][Rpks]\n",
         "  for idx, k in enumerate(Rpks):\n",
         "    if (k-wnw10_smp)>0:\n",
-        "      Rpks_tr10.append(k)\n",
+        "      for idx, j in enumerate(Rpks):\n",
+        "        \n",
+        "        Rpks_tr10.append(k)\n",
         "Rpks_tr10 = np.vstack(Rpks_tr10)"
       ],
       "metadata": {
