Morpho cross aggiustato in progress one beat

--- a/AI_Assignment.ipynb
+++ b/AI_Assignment.ipynb
@@ -89,6 +89,7 @@
         "from numpy import array, matrix, multiply, arange, absolute\n",
         "\n",
         "from scipy import signal\n",
+        "from scipy import stats\n",
         "from scipy.signal import lfilter, medfilt, resample, kaiserord, firwin, freqz, correlate\n",
         "\n",
         "import pandas as pd\n",
@@ -1822,11 +1823,11 @@
       ],
       "metadata": {
         "id": "Td4jAd0qxotS",
-        "outputId": "593ad077-5cca-4493-88fa-674e85b0aa82",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 281
-        }
+        },
+        "outputId": "593ad077-5cca-4493-88fa-674e85b0aa82"
       },
       "execution_count": 126,
       "outputs": [
@@ -1915,7 +1916,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#####Alignment through Cross-Correlation"
+        "#####Alignment through cross-correlation"
       ],
       "metadata": {
         "id": "v5aHIkYzbcvf"
@@ -2025,10 +2026,7 @@
     {
       "cell_type": "code",
       "source": [
-        "import pandas as pd\n",
-        "from scipy import stats\n",
-        "\n",
-        "df=pd.DataFrame({'nbeat_smp':np.ndarray.tolist(corr_80[0][1]), 'max_corr':np.ndarray.tolist(corr_80[0][2])})\n",
+        "df = pd.DataFrame({'nbeat_smp':np.ndarray.tolist(corr_80[0][1]), 'max_corr':np.ndarray.tolist(corr_80[0][2])})\n",
         "df['z_score']=stats.zscore(np.ndarray.tolist(corr_80[0][2]))"
       ],
       "metadata": {
@@ -2132,7 +2130,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from scipy import signal\n",
         "beat_ecg = beats[41][2]\n",
         "max = (np.argmax(signal.correlate(np.vstack(beat_ecg), ecg_mean80)) - len(ecg_mean80))\n",
         "time = np.arange(0, 137, 1)\n",
