Finito, corretto minime cose

--- a/AI_Assignment.ipynb
+++ b/AI_Assignment.ipynb
@@ -228,7 +228,7 @@
       "outputs": [],
       "source": [
         "def storage(empty_list, input_directory, last_character, name):\n",
-        "  for file in sorted(os.listdir(input_directory)):                                # search amongst files in input directory\n",
+        "  for file in sorted(os.listdir(input_directory)):                                # search among files in input directory\n",
         "    filename = ntpath.basename(file)                                              # get file name\n",
         "    filename = os.path.splitext(filename)[0]                                      # remove file extension\n",
         "    if filename.endswith(last_character):                                         # check filename last character\n",
@@ -9442,9 +9442,20 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "PBJ4YsAnT9W3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "In order to have comparable values for the signals in input it is necessary to normalize them. We apply the same scaling adopted for the machine learning approach."
+        "In order to have comparable values for the signals in input it is necessary to scale them. We apply the same scaling adopted for the machine learning approach."
       ],
       "metadata": {
         "id": "EBNiBowQ1Ygx"
@@ -11173,7 +11184,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "In classical machine learning approach, when performing hand-crafted feature extraction, we are explicitly providing the model with we want it to look at. \n",
+        "In classical machine learning approach, when performing hand-crafted feature extraction, we are explicitly providing the model what we want it to look at. \n",
         "However, in deep learning the user does not actually know exactly how the model is treating the data and what features it is focusing on.\n",
         "The Wide ResNet proposes an embedded approach by merging the potential of both techniques.\n",
         "Within this technique different options are available. We decided to train both the deep learning and the machine learning portion of the network in parallel."
@@ -12487,7 +12498,6 @@
     "colab": {
       "collapsed_sections": [],
       "name": "AI_Assignment.ipynb",
-      "toc_visible": true,
       "provenance": [],
       "include_colab_link": true
     },
