--- a/AI_Assignment.ipynb
+++ b/AI_Assignment.ipynb
@@ -12,6 +12,24 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "# <b> BEAT CLASSIFIER FOR ECG SIGNALS"
+      ],
+      "metadata": {
+        "id": "CAtqaveS9d6D"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## <b> Giuseppe Di Tursi, B.Eng., Chiara Disanto, B.Eng. and Alice Savino, B.Eng"
+      ],
+      "metadata": {
+        "id": "fJZCGuGP9dkv"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "nTF9KoI79End"
       },
